--- a/projet/.env
+++ b/projet/.env
@@ -11,8 +11,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=histage
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=histage
+DB_PASSWORD="Limayrac#31"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
